--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "start": "concurrently \"ng serve\" \"node server.js\"",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "prod": "ng build --prod",
     "test": "ng test",
     "docker": "docker-compose up --build",
-    "server": "concurrently \"node server.js\" \"cd dist/ && http-server -p 6011\"",
+    "server": "concurrently \"ng serve --host 0.0.0.0 --disable-host-check\" \"node server.js\"",
     "electron": "concurrently \"ng build --base-href ./ && electron .\" \"node server.js\""
   },
   "private": true,
@@ -43,8 +42,7 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "http-server": "^14.0.0"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.11",
@@ -60,7 +58,6 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.6.2",
-    "http-server": "^14.0.0"
+    "typescript": "~4.6.2"
   }
 }
